[package]
name = "sentry-tracing"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kellpossible/sentry-tracing"
description = """
Sentry integration for the tracing crate
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
eyre = "0.6"
sentry-core = "0.22"
sentry-backtrace = "0.22"
serde = "1.0"
serde_json = "1.0"
strip-ansi-escapes = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
sentry = "0.22"